style.css
@import url('https://fonts.googleapis.com/css?family=Enriqueta|Montserrat&display=swap');

body {
    font-family: "Montserrat", sans-serif;
    text-align: center;
    max-width: 56rem;
    margin: 0 auto;
    padding: 0;
}

h1,
h2,
.header {
    font-family: "Enriqueta", serif;
}

a {
    text-decoration: none;
    color: #645fff;
}

.header {
    color: #808080;
    text-decoration: none;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: -1;
    height: 4rem;
    text-shadow: 0 0 20px white;
    transition: opacity 100ms cubic-bezier(0, 1, 0.6, 1);
}

.headinfo {
    max-height: 50vh;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: -1;
    opacity: 1;
    transition: opacity 150ms ease-out;
}

.headinfo .logo > *{
    padding-top: 2rem;
    width: 35vh;
    filter: drop-shadow(0px 0px 0.8rem white);
}

.headinfo .button {
    float: left;
    margin: 1.5rem calc(50% - 17.5vh - 0.5rem);
    width: 35vh;
}

.headinfo .links {
    width: 35vh;
    margin: 1.5rem calc(50% - 17.5vh - 0.5rem);
}

.headinfo .links a {
    float: left;
    width: 16.5vh;
    text-align: start;
    text-shadow: 0 0 10px white;
}

.headinfo .links div:first-of-type a {
    text-align: end;
    margin-right: 2vh;
}


/*
 * Content grids
 * - Index
 * - Downloads
 */
.contentgrid {
    margin-top: 2rem;
    display: grid;
    grid-gap: 0.5rem;
    grid-template-columns: calc(50% - 0.25rem) calc(50% - 0.25rem);
}

.button {
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
    border-radius: 4rem;
    text-decoration: none;
    padding: 0.6rem;
    color: #404040;
    background-color: white;
    transition: 150ms;
}

.button:hover {
    transform: scale(0.98);
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.05);
}

.box {
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
    border-radius: 1rem;
    text-decoration: none;
    padding: 1rem;
    overflow: hidden;
    transition: transform 150ms;
}

.box.nopadding {
    padding: 0;
}

.box *:not(a) {
    margin: 0;
    text-decoration: none;
    color: #404040;
}

.box.download {
    padding: 0;
}

.box.download h4 {
    color: #606060;
    font-size: 0.8rem;
}

.box.download .boxcontent {
    padding: 0.5rem;
    height: 10rem;
    overflow: hidden;
    font-family: "Montserrat", sans-serif;
}

.box.download .directdl {
    border-top: 1px solid rgba(0, 0, 0, 0.1);
    padding: 0.5rem;
}

.box.download img.preview {
    overflow: hidden;
    width: 100%;
    margin: 0.5rem auto;
    display: block;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    border-radius: 0.5rem;
    transition: 200ms;
}

.box.instagram-post>* {
    margin: -1px -1px -110px -1px !important;
    width: calc(100% + 2px) !important;
}

hr {
    border: 0.5px solid rgba(0, 0, 0, 0.1);
    width: 2rem;
    margin: 1rem auto !important;
}

.space {
    margin-top: 1rem;
    padding-top: 1rem;
}

.fileembed {
    width: 100%;
    height: 60vh;
    border-radius: 1rem;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    overflow: hidden;
}

.fileembed>* {
    width: calc(100% + 1.6rem);
    height: calc(60vh + 1.6rem);
    min-height: 60vh;
    margin: -0.8rem;
}

.container {
    padding: 1rem;
}

.sheet {
    margin-top: 4rem;
    border-top-left-radius: 1rem;
    border-top-right-radius: 1rem;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
    z-index: 1;
    background-color: white;
    min-height: calc(100vh - 6rem);
    transition: box-shadow 150ms ease-out;
}

.sheet.home {
    margin-top: 50vh;
}

.sheet > * {
    opacity: 1;
    transition: transform 150ms, opacity 150ms;
}


#background {
    position: fixed;
    top: 0;
    height: 60vh;
    width: 100%;
    max-width: 56rem;
    z-index: -100;
    background-size: cover;
    background-position: center;
    filter: brightness(1.8) opacity(0.5) blur(0.8rem);
    opacity: 1;
    transition: filter 300ms, opacity 1500ms;
}

#background:hover {
    filter: brightness(1.4) opacity(0.5) blur(0.1rem);
}



/*
* Animations
*/

body.active #background {
    opacity: 0;
    transition: 200ms ease-out;
}

body.active .header {
    opacity: 0;
    transition: 0ms 200ms ease-out;
}

body.active .headinfo {
    opacity: 0;
    transition: 200ms ease-out;
}

body.active .sheet {
    transform: translateY(calc(50vh - 4rem));
    box-shadow: unset;
    transition: 200ms ease-out;
}

body.active .sheet.home {
    transform: translateY(calc(-50vh + 4rem));
    box-shadow: unset;
    transition: 200ms ease-out;
}

body.active .sheet > * {
    transform: translateY(4rem);
    opacity: 0;
    transition: 150ms ease-out;
}

body.active .sheet.home > * {
    transform: translateY(-2rem);
    opacity: 0;
    transition: 150ms ease-out;
}


/*
* Dark theme
*/

@media (prefers-color-scheme: dark) {
    html {
        background-color: black;
    }
    body {
        color: white;
        background-color: black;
        transition: 200ms;
    }
    body.active {
        background-color: #2a2a2d;
        transition: 200ms ease-out;
    }
    #background {
        filter: brightness(0.4) opacity(0.5) blur(0.8rem);
    }
    .header {
        text-shadow: 0 0 20px black;
    }
    .headinfo .logo > * {
        filter: drop-shadow(0px 0px 0.8rem black);
    }
    .headinfo .links a {
        text-shadow: 0 0 10px black;
    }
    .sheet {
        background-color: #2a2a2d;
    }
    .box, .button, .box *:not(a) {
        background-color: #222225;
        color: white;
    }
    .box.download img.preview {
        box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);        
        filter: invert(0.9);
    }
    .box.download h4 {
        color: #bdbdbd;
    }
    a {
        color: #4f76c5;
    }
}

